# mcp-ollama-account-rotation

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py  account.py  account_manager.py  client.py  config.py  exceptions.py  health.py  logging.py  models.py  proxy.py  retry.py  router.py  server.py  storage.py  utils.py
data/: accounts.json
tests/: conftest.py  test_account.py  test_account_manager.py  test_client.py  test_config.py  test_health.py  test_logging.py  test_retry.py  test_rotation.py  test_router.py  test_server.py  test_state.py
tests/fixtures/: test_config.yaml
